feat: Change theme

--- a/config
+++ b/config
@@ -1,6 +1,8 @@
 cursor-style=bar
 
-theme=MaterialDarker
+theme=tokyonight
 
 window-padding-x=10
 window-padding-y=5
+
+keybind = "alt+space=text: "
