--- a/config
+++ b/config
@@ -1,8 +1,9 @@
 cursor-style=bar
+macos-titlebar-style = hidden
 
 theme=tokyonight
 
 window-padding-x=10
-window-padding-y=5
+window-padding-y=15
 
 keybind = "alt+space=text: "
