--- a/config
+++ b/config
@@ -1,7 +1,10 @@
 cursor-style=bar
 macos-titlebar-style = hidden
 
-theme=compline
+theme=Tokyonight
+
+window-width = 9999
+window-height = 9999
 
 window-padding-x=10
 window-padding-y=15
